--- a/prog2/frontend/css/tela9.css
+++ b/prog2/frontend/css/tela9.css
@@ -1,9 +1,12 @@
+@import "cores.css"; 
+
+
 #usuarios a {
-    background-color: #FFADAD;
-    color: #4D4D4D;
+    background-color: var(--salmao-apagado);
+    color: var(--salmao-apagado-fg);
 }
 
 #produtos a {
-    background-color: #FFADAD;
-    color: #4D4D4D;
+    background-color: var(--salmao-apagado);
+    color: var(--salmao-apagado-fg);
 }
