--- a/prog2/frontend/css/estilo3.css
+++ b/prog2/frontend/css/estilo3.css
@@ -8,6 +8,9 @@
 */
 
 
+@import "cores.css";
+
+
 #pesquisa {
     visibility: visible;
 }
@@ -66,7 +69,7 @@ main {
 }
 
 #novo-produto a {
-    background-color: #41c936;
+    background-color: var(--verde);
     color: white;
 
     padding: 1vh 12vw;
@@ -88,9 +91,6 @@ main {
 
 
     #novo-produto a {
-        background-color: #41c936;
-        color: white;
-
         padding: 1.5vh 30vw;
         max-width: 85vw;
     }
