--- a/prog2/frontend/css/tela11.css
+++ b/prog2/frontend/css/tela11.css
@@ -1,3 +1,6 @@
+@import "cores.css";
+
+
 table {
     border-collapse: collapse;
 }
@@ -11,7 +14,7 @@ th, td {
 }
 
 th {
-    background-color: #58508D;
+    background-color: var(--azul-roxo);
     color: white;
 }
 
