menu lateral retrátil

--- a/prog2/frontend/css/estilo1.css
+++ b/prog2/frontend/css/estilo1.css
@@ -149,8 +149,9 @@ main > div{
         border: 1px solid black;
         max-height: 100vh;
         padding-top: 30px;
-
-
+    }
+    .barra{
+        display: none;
     }
 }
 @media (max-width: 1000px) {
@@ -197,6 +198,9 @@ main > div{
   }
   .link:hover{
       background-color: #050542;
+  }
+  .barra{
+      display: none;
   }
 
 
