--- a/prog2/frontend/css/menu-lateral.css
+++ b/prog2/frontend/css/menu-lateral.css
@@ -1,17 +1,15 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+@import "cores.css";
 
-.barra{
-    background-color:#003F5C;
+.barra {
+    background-color: var(--azul-forte);
     height: 100%;
-    width: 300px;
+    width: 60%;
     position: absolute;
     transition: all .2s linear;
 
-
+    display: none;
 }
+
 nav > a{
     text-decoration: none;
 }
@@ -29,15 +27,8 @@ nav{
     transition: all .2s linear;
     color: #fff;
     text-align: center;
-    border-bottom: 2px solid #003F5C;
+    border-bottom: 2px solid var(--azul-forte);
 }
-.link:hover{
+.link:hover, .link:active{
     background-color: #050542;
-}
-@media (max-width: 1000px) {
-    .barra{
-        width: 400px;
-    }
-
-
 }
