--- a/prog2/css/reset.css
+++ b/prog2/css/reset.css
@@ -87,34 +87,25 @@ h1, h2, h3, h4, h5, h6 {
     cursor: default;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
+
 
 textarea {
     overflow: auto;
 }
 
-button, input, optgroup, select, textarea {
+input, optgroup, select, textarea {
     font: inherit;
     border-radius: 0;
     color: inherit;
 }
 
-button, select {
+select {
     text-transform: none;
 }
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
 
-button, input, select, textarea {
+
+input, select, textarea {
     background-color: transparent;
     border-style: none;
     outline: none;
@@ -146,10 +137,7 @@ legend {
     max-width: 100%;
 }
 
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit;
-}
+
 
 /*
 =================================================
