--- a/prog2/css/estilo1.css
+++ b/prog2/css/estilo1.css
@@ -66,7 +66,7 @@ main {
     grid-auto-rows: auto;
     grid-gap: 3%;
     margin: 7px;
-    margin-top: 30px;
+    
 
 
 }
@@ -137,6 +137,7 @@ div#login > a > img{
 
     main {
         grid-template-columns: auto auto auto auto;
+        padding-top: 0px;
     }
 
     #cadastro {
