--- a/prog2/css/principal-lu.css
+++ b/prog2/css/principal-lu.css
@@ -44,6 +44,8 @@ header {
     height: 5px;
     border: 1px solid black;
 }
+
+
 @media (min-width: 1000px) {
 
     header {
@@ -68,6 +70,14 @@ header {
     #divBusca > img{
         margin-top: 7px;
     }
-  
+    h2[name="resultado"]{
+        padding-top: 40px;
+        padding-left: 15px;
+        text-align: left;
+        font-size: 30px;
+        font-style: italic;
+        color: gray;
+    }
+
 
 }
